--- a/circle.yml
+++ b/circle.yml
@@ -5,4 +5,7 @@ machine:
 test:
   override:
     - lein trampoline test
-    - lein trampoline lint
+    # Bring back Eastwood!
+    #
+    # https://github.com/invetica/redirects/issues/2
+    - lein whitespace-linter
